# course-geometrical-methods

./: .gitignore  README.md  hw1.ipynb  hw2.ipynb  main.py  pyproject.toml
