[project]
name = "course-geometrical-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "persim>=0.3.8",
    "pillow>=11.2.1",
    "ripser>=0.6.12",
    "scikit-dimension>=0.3.4",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
]
